--- a/.github/workflows/osv-scanner-pr.yml
+++ b/.github/workflows/osv-scanner-pr.yml
@@ -54,8 +54,8 @@ jobs:
         scan-args: |-
           --format=json
           --output=old-results.json
-          -r
-          ./
+          ./pom.xml
+          ./maven_plugin/pom.xml
 
     - name: "Checkout current branch"
       # Use -f in case any changes were made by osv-scanner (there should be no changes)
